test/library/packages/SortedMap/init/testInitGenericError.chpl
use SortedMap;



class C {
  var x = 10;
}

var l = new sortedMap(C, int);  // C has generic management
writeln(l);
